{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 22,
  "lineage": "d8f0e852-4353-ee37-158b-fed46d04bab3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:840310541912:internet-gateway/igw-06ae630f2010e4bd9",
            "id": "igw-06ae630f2010e4bd9",
            "owner_id": "840310541912",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-00c3bbfc1fee23359"
          },
          "dependencies": [
            "aws_vpc.cust-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:840310541912:route-table/rtb-07e2227aad91e5f2c",
            "id": "rtb-07e2227aad91e5f2c",
            "owner_id": "840310541912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Pri-rt"
            },
            "tags_all": {
              "Name": "Pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c3bbfc1fee23359"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cust-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:840310541912:route-table/rtb-084f184cbe9a5c880",
            "id": "rtb-084f184cbe9a5c880",
            "owner_id": "840310541912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ae630f2010e4bd9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pub-rt"
            },
            "tags_all": {
              "Name": "Pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c3bbfc1fee23359"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.cust-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pr-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0215255d48017525d",
            "route_table_id": "rtb-084f184cbe9a5c880",
            "subnet_id": "subnet-0409a3dcc9e3a1325"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Pub-rt",
            "aws_subnet.pub-sub",
            "aws_vpc.cust-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pr-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086af8ffc8a13f31c",
            "route_table_id": "rtb-07e2227aad91e5f2c",
            "subnet_id": "subnet-0fcad9bc15e3669b5"
          },
          "dependencies": [
            "aws_route_table.Pri-rt",
            "aws_subnet.pri-sub",
            "aws_vpc.cust-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:840310541912:subnet/subnet-0fcad9bc15e3669b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.10.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcad9bc15e3669b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840310541912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pri-sub"
            },
            "tags_all": {
              "Name": "Pri-sub"
            },
            "vpc_id": "vpc-00c3bbfc1fee23359"
          },
          "dependencies": [
            "aws_vpc.cust-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:840310541912:subnet/subnet-0409a3dcc9e3a1325",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.10.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0409a3dcc9e3a1325",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840310541912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-sub"
            },
            "tags_all": {
              "Name": "Pub-sub"
            },
            "vpc_id": "vpc-00c3bbfc1fee23359"
          },
          "dependencies": [
            "aws_vpc.cust-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cust-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:840310541912:vpc/vpc-00c3bbfc1fee23359",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.10.0/24",
            "default_network_acl_id": "acl-057d425818750853a",
            "default_route_table_id": "rtb-09bb1be9a13da4a47",
            "default_security_group_id": "sg-071020886fab8d44d",
            "dhcp_options_id": "dopt-05bf0399c97cb2b32",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c3bbfc1fee23359",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09bb1be9a13da4a47",
            "owner_id": "840310541912",
            "tags": {
              "Name": "mumbai-vpc"
            },
            "tags_all": {
              "Name": "mumbai-vpc"
            }
          }
        }
      ]
    }
  ]
}